Agregados componentes clientes y negocios + servicios

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,15 +12,18 @@
     "isolatedModules": true,
     "experimentalDecorators": true,
     "importHelpers": true,
+    "forceConsistentCasingInFileNames": true,
+    "useDefineForClassFields": false,
     "target": "ES2022",
-    "module": "preserve"
+    "module": "esnext",
+    "moduleResolution": "bundler"
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "typeCheckHostBindings": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "noImplicitOverride": true
   },
   "files": [],
   "references": [
